--- a/calculadora.html
+++ b/calculadora.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div id="borda-tela">
-            <input type="text" id="screen" readonly>
+            <input type="text" id="screen" maxlenght="8" readonly>
         </div>
         <div id="borda-teclado">
             <div id="teclado">
